--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Interactive Archive</h1>
+    <h1>EST's Interactive Tools Archive</h1>
     <input type="text" id="search" placeholder="Search...">
     <div class="grid" id="archive-grid"></div>
   </div>
